--- a/template/frontend/css/home-style.css
+++ b/template/frontend/css/home-style.css
@@ -162,7 +162,7 @@
     padding-left: 3vw;
     padding-right: 3vw;
     color: #959595;
-    height: 5vw;
+    height: 71px;
 }
 .product-product-name {
     display: -webkit-box;
